--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
 .App {
   text-align: center;
 }
-#graella {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
+
+.App-header {
+  background-color: #fad1c8;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+}
+
